# bartste-prompts

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
New file: src/prompts/: promptmaker.py
New file: src/prompts/static/: system.md
src/prompts/: __init__.py  __main__.py  _actions.py  _logger.py  _parser.py  _promptmaker.py  _promptrunner.py  _runner.py  _tools.py  actions.py  ai.py  cli.py  coder.py  commands.py  docstrings.py  enums.py  exceptions.py  factory.py  instructions.py  logger.py  parser.py  paths.py  prompt.py  prompt_maker.py  promptcoder.py  promptmaker.py  promptrunner.py  utils.py
src/prompts/_cli/: __init__.py  parser.py
src/prompts/_instructions/: __init__.py
src/prompts/_instructions/commands/explain/action/: aider.md
src/prompts/_instructions/commands/unittests/filetype/: python.md
src/prompts/_instructions/default/: template.md
src/prompts/_instructions/default/filetype/: python.md
src/prompts/_instructions/docstrings/: files.md
src/prompts/_prompts/: files.md
src/prompts/_prompts/command/: refactor.md  unittests.md
src/prompts/_prompts/filetype/: bash.md  c.md  cpp.md  lua.md  zsh.md
src/prompts/_prompts/user/: typehints.md
src/prompts/_text/command/: docstrings.md  fix.md
src/prompts/_text/filetype/: bash.md  c.md  cpp.md  zsh.md
src/prompts/prompts/: __init__.py  fix.md  refactor.md  system.md
src/prompts/prompts/user/: unittests.md
src/prompts/static/: docstrings.md  fix.md  refactor.md  typehints.md
tests/: __init__.py  test___main__.py  test__logger.py  test__parser.py  test__promptmaker.py  test__runner.py  test__tools.py  test_actions.py  test_coder.py  test_enums.py  test_instructions.py  test_logger.py  test_parser.py  test_prompt.py  test_promptmaker.py
tests/test__cli/: test_parser.py
