[project]
name = "prompts"
version = "0.1.0"
description = "A collection of prompts for the aider AI coding assistant"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "aider-chat>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
]

[project.scripts]
prompts = "prompts.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["prompts"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
